syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "GrpcService.Protos";
package GrpcService.Protos;

// The Weather service definition
service Broadcast {
    rpc AddMessage(BroadcastData) returns (google.protobuf.Empty);
}
  

message BroadcastData {
    google.protobuf.Timestamp dateTime = 1;
    int32 temperatureC = 2;
    string summary = 3;
}